--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "rebass": "^4.0.7",
     "sass": "^1.42.1"
   }
 }
