--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-remark-images-contentful": "^4.11.0",
     "gatsby-source-contentful": "^5.14.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
@@ -28,7 +29,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "rebass": "^4.0.7",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "uuid": "^3.4.0"
   }
 }
